# lab06

./: CMakeLists.txt  CPackConfig.cmake  README.md
.github/workflows/: action.yml
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  solver_app
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
